# smop

./: .coveragerc  .gitignore  .travis.yml  HACKING.rst  INSTALL  LICENSE.MIT  MANIFEST.in  Matrix.py  NEWS.rst  README  README.md  README.rst  SMOP.rst  appveyor.yml  coverage.sh  meta.yaml  requirements.txt  run.py  setup.py
smop/libscripts/octave-4.0.2/: AUTHORS  BUGS  CITATION  ChangeLog  INSTALL.OCTAVE  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.in.h  configure  configure.ac  oct-conf-post.h  run-octave.in
smop/libscripts/octave-4.0.2/build-aux/: common.mk  find-files-with-tests.sh  mk-opts.pl
smop/libscripts/octave-4.0.2/doc/: Makefile.am  Makefile.in  texmf.cnf
smop/libscripts/octave-4.0.2/doc/doxyhtml/: Doxyfile.in  Makefile.am  Makefile.in  README
smop/libscripts/octave-4.0.2/doc/interpreter/: Makefile.am  Makefile.in  TODO  arith.texi  arith.txi  audio.texi  audio.txi  basics.texi  basics.txi  bugs.texi  bugs.txi  config-images.sh  container.texi  container.txi  contrib.texi  contrib.txi  contributors.in  contributors.texi  convhull.eps  cp-idx.texi  cp-idx.txi  data.texi  data.txi  debug.texi  debug.txi  delaunay.eps  diagperm.texi  diagperm.txi  diffeq.texi  diffeq.txi  doc-cache  emacs.texi  emacs.txi  errorbar.eps  errors.texi  errors.txi  eval.texi  eval.txi  expr.texi  expr.txi  (+142 more)
smop/libscripts/octave-4.0.2/doc/liboctave/: Makefile.am  Makefile.in  array.texi  bugs.texi  cp-idx.texi  dae.texi  diffeq.texi  error.texi  factor.texi  fn-idx.texi  gpl.texi  install.texi  intro.texi  liboctave.dvi  liboctave.info  liboctave.ps  liboctave.texi  matvec.texi  nleqn.texi  nlfunc.texi  ode.texi  optim.texi  preface.texi  quad.texi  range.texi  stamp-vti
smop/libscripts/octave-4.0.2/doc/refcard/: Makefile.am  Makefile.in  refcard-a4.dvi  refcard-a4.ps  refcard-a4.tex  refcard-legal.dvi  refcard-legal.ps  refcard-legal.tex  refcard-letter.dvi  refcard-letter.ps  refcard-letter.tex  refcard.tex
smop/libscripts/octave-4.0.2/etc/: NEWS.1  NEWS.2  NEWS.3  PROJECTS  README.Cygwin  README.Linux  README.MacOS  README.MinGW  README.Windows  README.gnuplot  README.kpathsea  gdbinit
smop/libscripts/octave-4.0.2/etc/OLD-ChangeLogs/: ChangeLog  ChangeLog.1  doc-ChangeLog  libcruft-ChangeLog  liboctave-ChangeLog  scripts-ChangeLog  src-ChangeLog  test-ChangeLog
smop/libscripts/octave-4.0.2/etc/icons/: Makefile.am  Makefile.in  octave.appdata.xml.in  octave.desktop.in
smop/libscripts/octave-4.0.2/examples/: Makefile.am  Makefile.in
smop/libscripts/octave-4.0.2/examples/code/: COPYING  Makefile.am  Makefile.in  addtwomatrices.cc  celldemo.cc  embedded.cc  fortrandemo.cc  fortransub.f  funcdemo.cc  globaldemo.cc  helloworld.cc  make_int.cc  mex_demo.c  mycell.c  myfeval.c  myfevalf.f  myfunc.c  myhello.c  mypow2.c  myprop.c  myset.c  mysparse.c  mystring.c  mystruct.c  oct_demo.cc  oregonator.cc  oregonator.m  paramdemo.cc  standalone.cc  standalonebuiltin.cc  stringdemo.cc  structdemo.cc  unwinddemo.cc
smop/libscripts/octave-4.0.2/examples/data/: Makefile.am  Makefile.in  penny.mat
smop/libscripts/octave-4.0.2/libgnu/: Makefile.am  Makefile.in  areadlink-with-size.c  base64.c  base64.h  canonicalize.c  canonicalize.h  chdir-long.c  chdir-long.h  copysign.c  copysignf.c  fchdir.c  fclose.c  fflush.c  file-set.c  filenamecat-lgpl.c  filenamecat.h  floor.c  floorf.c  fnmatch.c  fnmatch_loop.c  fpurge.c  freading.c  freading.h  frexpf.c  fseek.c  fseeko.c  getcwd.c  gethostname.c  getlogin_r.c  gl_openssl.h  glob-libc.h  glob.c  glob.in.h  hash-pjw.c  hash-pjw.h  hash-triple.c  isatty.c  link.c  log.c  (+38 more)
smop/libscripts/octave-4.0.2/libgui/: Makefile.am  Makefile.in  default-qt-settings.in  link-deps.mk  qterminal-module.mk
smop/libscripts/octave-4.0.2/libgui/graphics/: Backend.cc  Backend.h  BaseControl.cc  BaseControl.h  ButtonControl.cc  ButtonControl.h  Canvas.cc  Canvas.h  CheckBoxControl.cc  CheckBoxControl.h  Container.cc  Container.h  ContextMenu.cc  ContextMenu.h  EditControl.cc  EditControl.h  Figure.cc  Figure.h  FigureWindow.cc  FigureWindow.h  GLCanvas.cc  GLCanvas.h  GenericEventNotify.h  KeyMap.cc  KeyMap.h  ListBoxControl.cc  ListBoxControl.h  Logger.cc  Logger.h  Menu.cc  Menu.h  MenuContainer.h  MouseModeActionGroup.cc  MouseModeActionGroup.h  Object.cc  (+40 more)
smop/libscripts/octave-4.0.2/libinterp/: DOCSTRINGS  Makefile.am  Makefile.in  builtin-defun-decls.h  builtins.h  config-features.sh  find-defun-files.sh  gendoc.pl  genprops.awk  link-deps.mk  mk-errno-list  mk-pkg-add  mkbuiltins  mkdefs  mkops  oct-conf.in.h  octave.cc  octave.h  options-usage.h  version.cc  version.in.h
smop/libscripts/octave-4.0.2/liboctave/: Makefile.am  Makefile.in  link-deps.mk
smop/libscripts/octave-4.0.2/m4/: acinclude.m4  ax_blas.m4  ax_blas_f77_func.m4  ax_lapack.m4  ax_openmp.m4  base64.m4  ceil.m4  ceilf.m4  chdir-long.m4  copysign.m4  copysignf.m4  d-ino.m4  d-type.m4  fchdir.m4  fclose.m4  fflush.m4  filenamecat.m4  floor.m4  floorf.m4  fpurge.m4  freading.m4  frexpf.m4  fseek.m4  getcwd-abort-bug.m4  getcwd-path-max.m4  gethostname.m4  getlogin_r.m4  gl-openssl.m4  glob.m4  gnulib-cache.m4  gnulib-comp.m4  isatty.m4  link.m4  log.m4  log2-ieee.m4  log2.m4  log2f-ieee.m4  log2f.m4  logf.m4  mempcpy.m4  (+28 more)
smop/libscripts/octave-4.0.2/scripts/: DOCSTRINGS  Makefile.am  Makefile.in  mk-pkg-add  mkdoc.pl
smop/libscripts/octave-4.0.2/src/: Makefile.am  Makefile.in  display-available.c  display-available.h  main-cli.cc  main-gui.cc  main.in.cc  mkoctfile.in.cc  octave-config.in.cc  shared-fcns.h
smop/libscripts/octave-4.0.2/test/: Makefile.am  Makefile.in  args.tst  bc-overloads-expected  bug-31371.tst  bug-38576.tst  build-bc-overload-tests.sh  build-sparse-tests.sh  build_bc_overloads_expected.m  colormaps.tst  complex.tst  diag-perm.tst  error.tst  eval-catch.tst  fntests.m  for.tst  func.tst  global.tst  if.tst  index.tst  io.tst  jit.tst  line-continue.tst  logical-index.tst  null-assign.tst  parser.tst  prefer.tst  range.tst  recursion.tst  return.tst  slice.tst  struct.tst  switch.tst  system.tst  transpose.tst  try.tst  unwind.tst  while.tst
(+5148 files in other folders)
